namespace DriverAndVehicleLicenseDepartment;

public class LockedLicenses {}