---
title: Client Management System
---
erDiagram
    Persons {
        INT PersonID PK
        NVARCHAR(30) NationalNumber
        INT FullNameID FK
        DATETIME DateOfBirth
        INT ContactInformationID FK
        NVARCHAR(200) Address
        TINYINT CountryID FK
        NVARCHAR(2083) ImageURL
    }
    FullNames {
        INT FullNameID PK
        NVARCHAR(20) FirstName
        NVARCHAR(20) SecondName
        NVARCHAR(20) ThirdName
        NVARCHAR(20) FourthName
    }
    Countries {
        TINYINT CountryID PK
        NVARCHAR(60) CountryName
        VARCHAR(3) CountryCode
    }
    MobileNumbers {
        INT MobileNumberID PK
        VARCHAR(20) ContactNumber
        TINYINT CountryID FK
    }
    ContactInformation {
        INT ContactInformationID PK
        INT MobileNumberID FK
        VARCHAR(100) Email
    }
    Clients {
        INT ClientID PK
        INT PersonID FK
    }
    Employees {
        INT EmployeeID PK
        INT PersonID FK
    }
    EyeDoctors {
        INT EyeDoctorID PK
        INT EmployeeID FK
    }
    Supervisors {
        INT SupervisorID PK
        INT EmployeeID FK
    }
    DrivingExaminers {
        INT DrivingExaminerID PK
        INT EmployeeID FK
    }
    Currencies {
        TINYINT CurrencyID PK
        NVARCHAR(60) CurrencyName
        TINYINT CountryID FK
    }
    Tests {
        INT TestID PK
        INT LicenseID FK
        TINYINT CurrencyID FK
        DATETIME TestDateTime
        BIT IsSucceed
    }
    EyeTests {
        INT EyeTestID PK
        INT TestID FK
        INT EyeDoctorID FK
    }
    TheoreticalTests {
        INT TheoreticalTestID PK
        INT TestID FK
        INT SupervisorID FK
        TINYINT TestMark
    }
    DrivingTests {
        INT DrivingTestID PK
        INT TestID FK
        INT DrivingExaminerID FK
    }
    Payments {
        INT PaymentID PK
        TINYINT CurrencyID FK
        MONEY Amount
        DATETIME PaymentDateTime
        NVARCHAR(50) PaymentMethod
    }
    Requests {
        INT RequestID PK
        DATETIME RequestDateTime
        INT ClientID FK
        INT PaymentID FK
        INT EyeTestID FK
        INT TheoreticalTestID FK
        INT DrivingTestID FK
        INT LicenseID FK
    }
    LicenseIssuances {
        TINYINT LicenseIssuanceID PK
        NVARCHAR(50) LicenseIssuanceName
    }
    Coverages {
        TINYINT CoverageID PK
        NVARCHAR(30) CoverageName
    }
    LicenseTypes {
        INT LicenseTypeID PK
        NVARCHAR(50) LicenseName
        NVARCHAR(200) LicenseDescription
        TINYINT MinimumAge
        TINYINT LicenseDuration
    }
    Licenses {
        INT LicenseID PK
        INT LicenseTypeID FK
        INT ClientID FK
        TINYINT LicenseIssuanceID FK
        TINYINT CoverageID FK
        DATETIME IssueDateTime
        DATETIME ExpiryDateTime
        BIT IsActive
    }
    OfficialDrivers {
        INT OfficialDriverID PK
        INT LicenseID FK
    }
    LicenseRenewals {
        INT LicenseRenewalID PK
        INT RequestID FK
    }
    LockedLicenses {
        INT LockedLicenseID PK
        INT LicenseID FK
    }
    UnlockLicenses {
        INT UnlockLicenseID PK
        INT LicenseID FK
        DATETIME DateTimeUnlock
        INT PaymentID FK
    }
    LostLicenseReplacements {
        INT LostLicenseReplacementID PK
        INT LicenseID FK
    }
    DamagedLicenseReplacements {
        INT DamagedLicenseReplacementID PK
        INT LicenseID FK
        DATETIME ReplacementDateTime
    }
    Fees {
        TINYINT FeesID PK
        NVARCHAR(75) FeesName
        MONEY Amount
        TINYINT CurrencyID FK
    }

    Persons ||--|| FullNames: ""
    Persons ||--|| Countries: ""
    Persons ||--|| ContactInformation: ""
    ContactInformation ||--|| MobileNumbers: ""
    Persons ||--|| Clients: ""
    Persons ||--|| Employees: ""
    Employees ||--|| DrivingExaminers: ""
    Employees ||--|| EyeDoctors: ""
    Employees ||--|| Supervisors: ""
    Tests ||--|| Currencies: ""
    Currencies ||--|| Countries: ""
    Tests ||--|| EyeTests: ""
    EyeTests }o--|| EyeDoctors: ""
    Tests ||--|| TheoreticalTests: ""
    TheoreticalTests }o--|| Supervisors: ""
    Tests ||--|| DrivingTests: ""
    DrivingTests }o--|| DrivingExaminers: ""
    Requests }o--|| Clients: ""
    Payments ||--|| Currencies: ""
    Requests ||--o| Payments: ""
    Requests ||--|| EyeTests: ""
    Requests ||--|| TheoreticalTests: ""
    Requests ||--|| DrivingTests: ""
    Requests }|--|| Licenses: ""
    Licenses }|--|| LicenseTypes: ""
    Licenses ||--o{ Clients: ""
    Licenses }|--|| LicenseIssuances: ""
    Licenses }|--|| Coverages: ""
    Licenses }|--o{ Tests: ""
    OfficialDrivers ||--|{ Licenses: ""
    LicenseRenewals ||--o{ Requests: ""
    LockedLicenses }o--|| Licenses: ""
    UnlockLicenses ||--|| Payments: ""
    UnlockLicenses }o--|| Licenses: ""
    LostLicenseReplacements }o--|| Licenses: ""
    DamagedLicenseReplacements }o--|| Licenses: ""
    Fees ||--|| Currencies: ""